--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </div>
 </section>
 
-<section id="man">
+<!-- <section id="man">
     <div class="man-row">
         <div class="man-box">
             <img src="s5.jpg">
@@ -119,12 +119,12 @@
 </section>
 
 
+ -->
 
-
-<section id="footer">
+<!-- <section id="footer">
 	<h2>Developed by Bhavesh Prajapati</h2><br>
 	<br><img src="icon.png">
-</section>
+</section> -->
 
 
 </body>
