--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
 	<h1>Featured</h1>
 	<div class="wrapper">
 	<div class="box1">
-		<img src="s1.png">
+		<img src="img14.webp">
 		<div class="price">Price: $50</div>
 	</div>
 		<div>
-		<img src="s2.jpg">
+		<img src="img13.webp">
 		<div class="price">Price: $50</div>
 	</div>
 		<div>
-		<img src="s4.jpg">
+		<img src="img12.webp">
 		<div class="price">Price: $50</div>
 	</div>
 		<div>
-		<img src="s4.jpg">
+		<img src="img11.webp">
 		<div class="price">Price: $50</div>
 	</div>
 		<div>
-		<img src="s1.png">
+		<img src="img10.webp">
 		<div class="price">Price: $50</div>
 	</div>
 </div>
