--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 </div>
 </header>
  <section id="featured">
-	<h1>Featured</h1><br><br><br>
+	<h1>Featured</h1>
+	 <span class="line"><span></span><br><br><br>
 	<div class="wrapper">
 	<div class="box1">
 		<img src="img14.webp">
