--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </header>
  <section id="featured">
 	<h1>Featured</h1>
-	 <span class="line"><span></span><br><br><br>
+	 <span class="line"></span><br><br><br>
 	<div class="wrapper">
 	<div class="box1">
 		<img src="img14.webp">
