--- a/women.html
+++ b/women.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav>
-        <div class="logo">Shop</div>
+        <div class="logo"><img src="img15.webp"></div>
         <div class="menu">
             <a href="index.html">Home</a>
             <a href="feature.html">Featured</a>
