--- a/feature.html
+++ b/feature.html
@@ -29,7 +29,7 @@
             </div>
             <div><a href="https://www.meesho.com/my-heart-beat-for-you-best-gift-for-love-birthday-anniversary-friends-boyfriend-girlfriend-best-gift-for-home-decor-etc-friends/p/72g6zt">
                 <img src="img11.webp">
-                <div class="price">Price: $50</div>
+                <div class="price">Price: $50</div></a>
             </div>
             <div><a href="https://www.meesho.com/mahi-blue-crystals-floral-with-evil-eye-lumba-and-brother-rakhi-set-for-bhaiya-and-bhabhi-rcol1105682zblu/p/6yo6ld">
                 <img src="img12.webp">
