--- a/feature.html
+++ b/feature.html
@@ -13,14 +13,14 @@
         <div class="logo"><img src="img15.jpg"></div>
         <div class="menu">
             <a href="index.html">Home</a>
-            <a href="feature.html">Featured</a>
+            <a href="feature.html">New</a>
             <a href="man.html">Man</a>
             <a href="women.html">Women</a>
             <a href="#">Shop</a>
         </div>
     </nav>
     <section id="featured">
-        <h1>Featured</h1>
+        <h1>New Item</h1>
         <span class="line"></span>
         <div class="wrapper"><a href="https://www.meesho.com/birthday-gift-for-friend-girl-customised-birthday-photo-frames-for-best-friend-personalised-gifts-for-birthday-gifts-for-best-friend-husbandgf-gifts-for-bf/p/6tna3n">
             <div class="box1">
