--- a/women.html
+++ b/women.html
@@ -13,7 +13,7 @@
         <div class="logo"><img src="img15.jpg"></div>
         <div class="menu">
             <a href="index.html">Home</a>
-            <a href="feature.html">Featured</a>
+            <a href="feature.html">New</a>
             <a href="man.html">Man</a>
             <a href="women.html">Women</a>
             <a href="#">Shop</a>
