--- a/man.html
+++ b/man.html
@@ -12,7 +12,7 @@
         <div class="logo">Shop</div>
         <div class="menu">
             <a href="index.html">Home</a>
-            <a href="feature.html">Featured</a>
+            <a href="feature.html">New</a>
             <a href="man.html">Man</a>
             <a href="women.html">Women</a>
             <a href="#">Shop</a>
