--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div class="logo"><img src="img15.jpg"></div>
 		<div class="menu">
 			<a href="index.html">Home</a>
-			<a href="feature.html">Featured</a>
+			<a href="feature.html">New</a>
 			<a href="man.html">Man</a>
 			<a href="women.html">Women</a>
 			<a href="#">Shop</a>
@@ -38,7 +38,7 @@
 </div>
 </header>
  <section id="featured">
-	<h1>Featured</h1>
+	<h1>New Item</h1>
 	 <span class="line"></span><br><br><br>
 	<div class="wrapper">
 	<div class="box1">
